<resources>
    <string name="app_name">Chat GumiT</string>
    <string name="surprise_old_woman">Bất ngờ chưa bà dà… !!!</string>
    <string name="default_notification_channel_id">1234566789</string>
    <string name="sam_coffee_uncle">Sam Coffee uncle</string>
    <string name="created_by_medal">owner: Samchigo\ncreated by: Medal</string>
    <string name="u_r_my_caffeine">U\'r my caffeine</string>
    <string name="sample_string">Hello %1s</string>
    <string name="sample_error">Error: %1s &amp; %2s</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="borrowoke">Borrowoke</string>
    <string name="counter">counter</string>
    <string name="home_to_profile">From Home To Profile</string>
    <string name="input_bro">nhập đi mày</string>
    <string name="wow">Wow</string>
    <string name="todo">TODO</string>
    <string name="channel_human_readable_title">Channel human readable title</string>
    <string name="authentication">Authentication</string>
    <string name="open">Open</string>
    <string name="animation_fragment">Animation Fragment</string>
    <string name="medal_play_nothing">Medal không có chơi đồ</string>
    <string name="increase_second">increase second</string>
    <string name="increase_first">increase first</string>
    <string name="dogs">Dogs</string>
    <string name="wait_a_sec">Mấy con chó are coming…</string>
    <string name="tap_sam_to_see_dogs">Click Sam to see dogs</string>
    <string name="tap_sam_to_hide_dogs">Click Sam to hide dogs</string>
    <string name="gumi_demo_chatgpt">Gumi ChatGPT Demonstration</string>
    <string name="your_question">Ask me anything…</string>
    <string name="format_2_param">%1s - %2s</string>
    <string name="loading">Loading…</string>
    <string name="wait_for_assistant">Wait for assistant…</string>
    <string name="assistant_can_not_response">Something wrong! Please try again… ☹️</string>
    <string name="hope_the_answer_is_useful_to_you">Hope the answer is useful to you.</string>
    <string name="punch_right">🤜</string>
    <string name="punch_left">🤛</string>
    <string name="reset_chat">Resetting chat…</string>
    <string name="new_token">New tokens: %1d</string>
    <string name="total_token">Total tokens: %1d</string>
    <string name="cost_per_tokens">$%.3f</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="reset">Reset</string>
</resources>