<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNotificationContentExpend"
        style="@style/TextAppearance.Compat.Notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrowoke" />

    <ImageButton
        android:id="@+id/tvNotificationSubContent"
        style="@style/TextAppearance.Compat.Notification"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        android:text="@string/wow" />
</LinearLayout>