<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.animate.AnimationFragment">

    <LinearLayout
        android:id="@+id/lnTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:orientation="vertical"
        android:paddingTop="@dimen/_0dp"
        android:paddingBottom="@dimen/_10dp"
        app:layout_constraintBottom_toTopOf="@+id/frContents"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/animation_fragment"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:visibility="gone"
            tools:text="@string/tap_sam_to_see_dogs" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frContents"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glBetween" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBetween"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>